<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>param_configuration</name>
  <version>1.0.0</version>
  <description>The tools to make ROS 2 parameter configuration easier</description>
  <maintainer email="mart.moerdijk@karelics.fi">Mart Moerdijk</maintainer>
  <maintainer email="janne.a.karttunen@gmail.com">Janne Karttunen</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
